crates/benday-core/tests/snapshots/gallery__scatter_60x10.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
                     latency vs payload size

60┤                                                  ⣀
  │                                                  ⠉   ⣤
  │                                           ⠛  ⢠⡄
40┤                                    ⠛  ⢠⡄
  │                             ⠘⠃ ⢠⡄
  │                   ⣀   ⠘⠃ ⠶
20┤              ⣀    ⠉⠶
  │       ⢠⡄ ⢀⡀  ⠉⠛
  │   ⣤  ⠛   ⠈⠁
 0┤
  └┴───────────┴───────────┴──────────┴───────────┴───────────┴
   0          50          100        150         200        250

--- meta ---
{
  "dropped_rows": 0,
  "mark": "point",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 18
    }
  ],
  "size": {
    "columns": 63,
    "rows": 14
  },
  "x": {
    "domain": [
      0.0,
      250.0
    ],
    "field": "kb",
    "type": "quantitative"
  },
  "y": {
    "domain": [
      0.0,
      60.0
    ],
    "field": "ms"
  }
}
