crates/benday-core/tests/snapshots/gallery__temporal_bar_hourly_count_quiet.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
6┤           ⣿⣿⣿⣿⣿⣿
 │           ⣿⣿⣿⣿⣿⣿                                       ⣶⣶⣶⣶⣶⣶
 │  ⣀⣀⣀⣀⣀⣀   ⣿⣿⣿⣿⣿⣿                                       ⣿⣿⣿⣿⣿⣿
 │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿                                       ⣿⣿⣿⣿⣿⣿
 │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿                              ⣿⣿⣿⣿⣿⣿
 │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿                              ⣿⣿⣿⣿⣿⣿   ⣶⣶⣶⣶⣶⣶
 │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿                              ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
0┤  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿                              ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
 └────────────────────────────────────────────────────────────────────────
 Jun 14 08:00 09:00    10:00    11:00    12:00    13:00    14:00    15:00

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 74,
    "rows": 10
  },
  "x": {
    "categories": [
      "2026-06-14 08h",
      "2026-06-14 09h",
      "2026-06-14 10h",
      "2026-06-14 11h",
      "2026-06-14 12h",
      "2026-06-14 13h",
      "2026-06-14 14h",
      "2026-06-14 15h"
    ],
    "field": "ts",
    "timeUnit": "hour",
    "type": "temporal"
  },
  "y": {
    "aggregate": "count",
    "domain": [
      0.0,
      6.0
    ],
    "field": "ts"
  }
}
