crates/benday-core/tests/snapshots/gallery__temporal_bar_month_sum.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
500┤
   │                             ⣀⣀⣀⣀⣀⣀            ⣀⣀⣀⣀⣀⣀   ⣀⣀⣀⣀⣀⣀   ⣶⣶⣶⣶⣶⣶
   │  ⣤⣤⣤⣤⣤⣤            ⣶⣶⣶⣶⣶⣶   ⣿⣿⣿⣿⣿⣿            ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
   │  ⣿⣿⣿⣿⣿⣿   ⣀⣀⣀⣀⣀⣀   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿            ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
   │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣤⣤⣤⣤⣤⣤   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
   │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
   │  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
  0┤  ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿   ⣿⣿⣿⣿⣿⣿
   └────────────────────────────────────────────────────────────────────────
      Sep '25    Oct      Nov      Dec    Jan '26    Feb      Mar      Apr

--- meta ---
{
  "dropped_rows": 0,
  "mark": "bar",
  "size": {
    "columns": 76,
    "rows": 10
  },
  "x": {
    "categories": [
      "2025-09",
      "2025-10",
      "2025-11",
      "2025-12",
      "2026-01",
      "2026-02",
      "2026-03",
      "2026-04"
    ],
    "field": "d",
    "timeUnit": "month",
    "type": "temporal"
  },
  "y": {
    "aggregate": "sum",
    "domain": [
      0.0,
      500.0
    ],
    "field": "revenue"
  }
}
