crates/benday-core/tests/snapshots/gallery__temporal_line_daily_week_ticks.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
220┤                                                                ⡀
   │                                               ⣀⠤⡀       ⣀⠔⠢⠤⣀⠔⠊
   │                             ⢀⠔⠢⢄⡀          ⡠⠔⠉  ⠈⠑⢄   ⡠⠊
   │                    ⢀⡀  ⡠⠊⠑⠢⠔⠁   ⠈⠑⠤⣀⡀    ⢀⠎        ⠉⠢⠊
   │           ⢀⠔⠱⡀   ⡠⠒⠁⠈⠑⠊             ⠈⠉⠒⠤⡰⠁
   │    ⢀⡀   ⢀⠔⠁  ⠘⡄⡠⠊
   │ ⢀⠔⠊⠁⠈⠒⢄⠔⠁     ⠈
120┤⡠⠊
   └┴─────────────────┴─────────────────┴────────────────┴─────────────────┴
Jun 1 '26           Jun 8            Jun 15           Jun 22          Jun 29

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 26
    }
  ],
  "size": {
    "columns": 76,
    "rows": 10
  },
  "x": {
    "domain": [
      "2026-06-01",
      "2026-06-29"
    ],
    "field": "day",
    "type": "temporal"
  },
  "y": {
    "domain": [
      120.0,
      220.0
    ],
    "field": "sessions"
  }
}
