crates/benday-core/tests/snapshots/gallery__temporal_line_gappy.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
750┤                             ⡀
   │                         ⢀⡠⠔⠉⠈⠑⠒⠤⠤⣀⣀
   │                     ⢀⡠⠔⠊⠁          ⠉⠉⠒⠒⠤⠤⣀⣀
   │                 ⢀⡠⠔⠊⠁                      ⠉⠉⠑⠒⠢⠤⢄⣀⡀
   │             ⢀⡠⠔⠊⠁                                  ⠈⠉⠑⠒⠢⠤⢄⣀⠤⠒
   │         ⢀⡠⠔⠊⠁
   │ ⡠⢄⣀⡀⢀⡠⠔⠊⠁
400┤⠔⠁  ⠈⠁
   └┴───────────┴───────────┴───────────┴──────────┴───────────┴───────────┴
Mar 2 '26     Mar 9      Mar 16      Mar 23     Mar 30       Apr 6    Apr 13

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 8
    }
  ],
  "size": {
    "columns": 76,
    "rows": 10
  },
  "x": {
    "domain": [
      "2026-03-02",
      "2026-04-13"
    ],
    "field": "t",
    "type": "temporal"
  },
  "y": {
    "domain": [
      400.0,
      750.0
    ],
    "field": "latency_ms"
  }
}
