crates/benday-core/tests/snapshots/gallery__temporal_line_quarterly_rollover.snap
---
source: crates/benday-core/tests/gallery.rs
expression: bundle
---
450┤
   │                                                                  ⣀⣀⣀⠤⠤⠤
   │                                                  ⢀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠤⠤⠤⠒⠊⠉
   │                                     ⢀⣀⡠⠤⠤⠒⠒⠒⠊⠉⠉⠉⠉⠁
   │                     ⢀⣀⣀⣀⠤⠤⠔⠒⠒⠒⠤⠤⠤⠔⠒⠉⠁
   │      ⢀⣀⡠⠤⠤⠤⣀⣀⣀⠤⠔⠒⠊⠉⠉⠁
   │⠤⠔⠒⠒⠉⠉⠁
200┤
   └┴─────────────┴─────────────┴──────────────┴─────────────┴─────────────┴
 Q1 '25          Q2            Q3             Q4          Q1 '26          Q2

--- meta ---
{
  "dropped_rows": 0,
  "mark": "line",
  "series": [
    {
      "color": "#00d5ef",
      "name": "",
      "points": 16
    }
  ],
  "size": {
    "columns": 76,
    "rows": 10
  },
  "x": {
    "domain": [
      "2025-01-01",
      "2026-04-01"
    ],
    "field": "month",
    "type": "temporal"
  },
  "y": {
    "domain": [
      200.0,
      450.0
    ],
    "field": "mrr"
  }
}
